linkerd-security/module2/live-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/configuration-snippet":"proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;\nproxy_hide_header l5d-remote-ip;\nproxy_hide_header l5d-server-id;\n","nginx.ingress.kubernetes.io/upstream-vhost":"websvc-split.emojivoto.svc.cluster.local:80"},"creationTimestamp":"2019-12-09T19:17:19Z","generation":2,"name":"web [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
    nginx.ingress.kubernetes.io/upstream-vhost: web-svc.emojivoto.svc.cluster.local:80
  creationTimestamp: "2019-12-09T19:17:19Z"
  generation: 4
  name: web-ingress
  namespace: emojivoto
  resourceVersion: "120803"
  selfLink: /apis/extensions/v1beta1/namespaces/emojivoto/ingresses/web-ingress
  uid: 84cfc442-1ab8-11ea-a0f9-4ad2e6ebf324
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: 80
status:
  loadBalancer:
    ingress:
    - ip: 13.83.55.200
