linkerd-security/module2/web-oc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"creationTimestamp":null,"name":"web","namespace":"emojivoto"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"web-svc"}},"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"web-svc"}},"spec":{"containers":[{"env":[{"name":"WEB_PORT","value":"8080"},{"name":"EMOJISVC_HOST","value":"emoji-svc.emojivoto:8080"},{"name":"VOTINGSVC_HOST","value":"voting-svc.emojivoto:8080"},{"name":"INDEX [...]
  creationTimestamp: "2019-12-09T07:01:03Z"
  generation: 4
  labels:
    app: web-svc-oc
  name: web-svc-oc
  namespace: emojivoto
  resourceVersion: "100186"
  selfLink: /apis/extensions/v1beta1/namespaces/emojivoto/deployments/web
  uid: a9bdd5f6-1a51-11ea-a0f9-4ad2e6ebf324
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web-svc-oc
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2019-12-09T11:22:10-08:00"
      creationTimestamp: null
      labels:
        app: web-svc-oc
    spec:
      containers:
      - env:
        - name: WEB_PORT
          value: "8080"
        - name: EMOJISVC_HOST
          value: emoji-svc.emojivoto:8080
        - name: VOTINGSVC_HOST
          value: voting-svc.emojivoto:8080
        - name: INDEX_BUNDLE
          value: dist/index_bundle.js
        image: buoyantio/emojivoto-web:v8-tracing
        imagePullPolicy: IfNotPresent
        name: web-svc-oc
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 100m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: web
      serviceAccountName: web
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-12-09T07:01:06Z"
    lastUpdateTime: "2019-12-09T07:01:06Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-12-09T07:01:03Z"
    lastUpdateTime: "2019-12-09T19:23:09Z"
    message: ReplicaSet "web-b6dc7bcc4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
